# gaokao-zhiyuan-recommender

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  branding.json  pyproject.toml  requirements.txt  怎么打开.txt
.streamlit/: config.toml  secrets.toml.example
data/: REAL_DATA.md  admission_scores.csv  control_lines.csv  generate_mock_data.py  import_admissions_xlsx.py  import_segments_xlsx.py  major_catalog.py  majors.csv  schools.csv
data/incoming/: README.md
data/real/: admissions_meta.json  majors.csv  schools.csv
data/segments/: sources.json  上海_综合_2025.csv  上海_综合_2026.csv  云南_历史_2025.csv  云南_物理_2025.csv  内蒙古_历史_2026.csv  内蒙古_物理_2026.csv  北京_综合_2025.csv  北京_综合_2026.csv  吉林_历史_2025.csv  吉林_历史_2026.csv  吉林_物理_2025.csv  吉林_物理_2026.csv  四川_历史_2025.csv  四川_物理_2025.csv  天津_综合_2025.csv  天津_综合_2026.csv  宁夏_历史_2025.csv  宁夏_历史_2026.csv  宁夏_物理_2025.csv  宁夏_物理_2026.csv  安徽_历史_2026.csv  安徽_物理_2026.csv  山东_综合_2022.csv  山东_综合_2023.csv  山东_综合_2024.csv  山东_综合_2025.csv  山东_综合_2026.csv  山西_历史_2025.csv  山西_历史_2026.csv  山西_物理_2025.csv  山西_物理_2026.csv  广东_历史_2025.csv  (+53 more)
docs/: 产品介绍.md
packaging/: build_portable.bat  installer.iss  启动应用.bat  打包说明.md
pages/: 10_🔢_一分一段.py  11_⚙️_数据源.py  12_🏛️_院校查询.py  13_🩺_志愿诊断.py  1_📝_信息录入.py  2_🧭_兴趣测评.py  3_🎯_志愿推荐.py  4_🃏_卡片选校.py  5_📚_专业百科.py  6_📊_数据大屏.py  7_🤖_AI助手.py  8_❤️_我的志愿表.py  9_🆚_院校对比.py
promo/: 志愿填报推广页.html  海报1_数据实力派.html  海报2_走心顾问派.html  海报3_金榜题名.html
scripts/: backtest.py  extract_segments.py  import_plans.py  import_province_packs.py
tests/: conftest.py  test_backtest.py  test_compare.py  test_control_lines.py  test_data_import.py  test_electives.py  test_engine.py  test_interest.py  test_ml_model.py  test_rank_based.py  test_rank_score.py  test_report.py  test_scoring.py  test_trending.py
(+26 files in other folders)
