[project]
name = "gaokao-zhiyuan-recommender"
version = "0.1.0"
description = "基于多维数据分析与推荐算法的高考志愿填报辅助系统，支持分数线预测与个性化志愿推荐"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "streamlit>=1.36",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "plotly>=5.18",
    "openai>=1.30",
]

[project.optional-dependencies]
# 导出 Word/PDF 的增强依赖（缺失时仅导出 Markdown）
export = [
    "python-docx>=1.1",
    "reportlab>=4.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
