[project]
name = "gaokao-zhiyuan-recommender"
version = "0.1.0"
description = "基于多维数据分析与推荐算法的高考志愿填报辅助系统，支持分数线预测与个性化志愿推荐"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "streamlit>=1.36",
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.18",
    "openai>=1.30",
    # 导出 Word/PDF 为核心功能，纳入默认依赖（缺失时仍优雅降级为仅 Markdown）
    "python-docx>=1.1",
    "reportlab>=4.0",
]

[project.optional-dependencies]
# 保留 export 分组以兼容旧的安装命令（内容已并入默认依赖）
export = [
    "python-docx>=1.1",
    "reportlab>=4.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
